objects/LLC_BI__Product_Catalog_Route_Template__c.object
<CustomObject>
    <description>Stores settings for a route to be generated for a new Product Catalog entry.</description>
    <fields>
        <fullName>LLC_BI__Product_Catalog_UI_Template__c</fullName>
        <description>Maps this route template to its parent template record</description>
        <inlineHelpText>Which Product Catalog UI Template is this Route Template associated with?</inlineHelpText>
        <label>Product Catalog UI Template</label>
        <referenceTo>LLC_BI__Product_Catalog_UI_Template__c</referenceTo>
        <relationshipLabel>Product Catalog Route Templates</relationshipLabel>
        <relationshipName>Product_Catalog_Route_Templates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Route_Body__c</fullName>
        <description>Defines the body contents of the route (VisualForce page name)</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>What page will be displayed in the body of this route? Can be left blank.</inlineHelpText>
        <label>Route Body</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Route_Icon_Class__c</fullName>
        <description>Icon set used for the Route</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>What icon set will be used?</inlineHelpText>
        <label>Route Icon Class</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Route_Navigation__c</fullName>
        <description>The navigation component used for the route</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>What navigation component will be used?</inlineHelpText>
        <label>Route Navigation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Route_Order__c</fullName>
        <description>The numeric order used for sorting routes in the same route group.</description>
        <inlineHelpText>What sorting order number will be assigned to this route? This will decide its placement among other routes in the same group.</inlineHelpText>
        <label>Route Order</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Route_Sub_Navigation__c</fullName>
        <description>Determines what sub navigation component will be used for the route</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>What sub navigation component will be used?</inlineHelpText>
        <label>Route Sub Navigation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Route_Topbar__c</fullName>
        <description>Determines what topbar component will be used for the route.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>What topbar component will be used?</inlineHelpText>
        <label>Route Topbar</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Screen_Is_Editable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Determines if the screen associated with this route is editable.</description>
        <inlineHelpText>Is the Screen associated with this Route editable?</inlineHelpText>
        <label>Screen Is Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Screen_Section_Resource__c</fullName>
        <description>Name of the screen section resource type to be used for this route</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Which screen section resource should be used for this route?</inlineHelpText>
        <label>Screen Section Resource</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Product Catalog Route Template</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Catalog Route Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Catalog Route Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>